# EnarauConservnacy

./: .env.example  .gitignore  config.py  pyproject.toml
data/: enarau_conservancy.geojson  mbokishi_conservancy.geojson  phase_1_corridor.geojson  phase_2_corridor.geojson
scripts/python/: historical_change_detection.ipynb
scripts/python/notebooks/: historical_change_detection.ipynb  productivity_degradation_landtrendr.ipynb
scripts/python/plotting/: historical_change_plots.ipynb  landscape_metrics.ipynb  productivity_degradation_plots.ipynb
scripts/r/: 00_config.R  01_prepare_inputs.R  02_area_transition_summaries.R  03_landscape_metrics.R  04_moving_window_connectivity.R  05_patch_importance_graph.R  06_figures_and_exports.R
scripts/r/R/: io.R  metrics.R  patch_graph.R  qa.R  recode.R  scoring.R
