[project]
name = "enarauconservnacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eetools[notebook]",
    "geopandas>=1.1.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
]

[tool.uv.sources]
eetools = { path = "../../gee_utils", editable = true }

# Replace the above source with the pinned git version before delivery
# eetools = { git = "https://github.com/harrellgis/gee_utils.git", tag = "v0.2.0" }

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
]
